--- a/Footer/footer_pr_1_0_0/sass/footer_pr_1_0_0.scss
+++ b/Footer/footer_pr_1_0_0/sass/footer_pr_1_0_0.scss
@@ -97,7 +97,7 @@ body {
     }
 }
 
-.footer_1_0_0 {
+.footer_pr_1_0_0 {
     background: url("../images/bg.jpg") 0 no-repeat;
     padding: 40px 0 45px;
     &__refuse {
@@ -117,85 +117,85 @@ body {
             font-size: 15px;
         }
     }
+    &__item {
+        display: flex;
+        &.item1 {
+            border-bottom: 1px solid #4f6c90;
+            margin-bottom: 10px;
+            justify-content: space-between;
+        }
+    }
+    &__title {
+        color: #fff;
+        text-align: left;
+        h3 {
+            @extend %font1;
+            text-transform: uppercase;
+            font-size: 20px;
+        }
+    }
+    &__pic {
+        padding-top: 30px;
+        img {
+            width: 100%;
+        }
+    }
+    &__contact {
+        padding-right: 20px;
+    }
+    &__social {
+        width: 80%;
+        text-align: right;
+        padding: 15px 0;
+        padding-right: 40px;
+        display: flex;
+        align-items: center;
+        .boxtop__call-2 {
+            background-color: #ff706f;
+            border-radius: 10px;
+            color: #fff;
+            text-align: center;
+            font-size: 18px;
+            font-weight: 600;
+            display: flex;
+            align-items: center;
+            padding: 5px 10px;
+            img {
+                width: 30px;
+                height: 30px;
+                margin-right: 10px;
+            }
+        }
+    }
+    &__partner {
+        ul {
+            list-style: none;
+            padding: 0;
+            width: 100%;
+            color: #fff;
+            font-size: 12px;
+        }
+    }
+    &__protect {
+        padding-top: 20px;
+        padding-left: 20px;
+        img {
+            width: 100%;
+            display: block;
+        }
+    }
     &__infor {
         width: 70%;
         b {
             color: #67c5ea;
-        }
-        &__title {
-            color: #fff;
-            text-align: left;
-            h3 {
-                @extend %font1;
-                text-transform: uppercase;
-                font-size: 20px;
-            }
-        }
-        &__pic {
-            padding-top: 30px;
-            img {
-                width: 100%;
-            }
-        }
-        &__contact {
-            padding-right: 20px;
-        }
-        &__item {
-            display: flex;
-            &.item1 {
-                border-bottom: 1px solid #4f6c90;
-                margin-bottom: 10px;
-                justify-content: space-between;
-            }
-        }
-        &__Social {
-            width: 80%;
-            text-align: right;
-            padding: 15px 0;
-            padding-right: 40px;
-            display: flex;
-            align-items: center;
-            .boxtop__call-2 {
-                background-color: #ff706f;
-                border-radius: 10px;
-                color: #fff;
-                text-align: center;
-                font-size: 18px;
-                font-weight: 600;
-                display: flex;
-                align-items: center;
-                padding: 5px 10px;
-                img {
-                    width: 30px;
-                    height: 30px;
-                    margin-right: 10px;
-                }
-            }
-        }
-        &__partner {
-            ul {
-                list-style: none;
-                padding: 0;
-                width: 100%;
-                color: #fff;
-                font-size: 12px;
-            }
-        }
-        &__protect {
-            padding-top: 20px;
-            padding-left: 20px;
-            img {
-                width: 100%;
-                display: block;
-            }
-        }
+        }    
     }
     .container {
         display: flex;
         justify-content: space-between;
         flex-wrap: wrap;
     }
-    &__Logo {
+    &__logo {
         width: 18%;
         text-align: center;
         padding-top: 90px;
@@ -206,18 +206,16 @@ body {
     }
     @media (max-width: 1180px) {
         padding: 20px 0 35px;
-        &__infor {
-            &__Social {
-                text-align: left;
-                margin-top: 0px;
+        &__social {
+            text-align: left;
+            margin-top: 0px;
+            width: 90%;
+            padding: 15px 15px 15px 0;
+        }
+        &__partner {
+            padding-top: 0px;
+            ul {
                 width: 90%;
-                padding: 15px 15px 15px 0;
-            }
-            &__partner {
-                padding-top: 0px;
-                ul {
-                    width: 90%;
-                }
             }
         }
     }
@@ -226,7 +224,7 @@ body {
         &__box {
             justify-content: center;
         }
-        &__Logo {
+        &__logo {
             padding-top: 0px;
         }
         &__infor {
@@ -236,89 +234,83 @@ body {
     @media (max-width: 540px) {
         padding: 0px 0 70px;
         background: #014fa2;
-        &__Logo {
+        &__item {
+            display: block;
+        }
+        &__logo {
             width: 100%;
         }
-        &__infor {
-            &__item {
-                display: block;
+        &__title {
+            text-align: center;
+            h3 {
+                font-size: 16px;
             }
-            &__title {
-                text-align: center;
-                h3 {
-                    font-size: 16px;
-                }
-            }
-            &__pic {
-                display: none;
-            }
-            &__contact {
-                padding-right: 0;
-            }
-            &__protect {
-                padding-top: 0;
-            }
-            &__Social {
-                justify-content: center;
-                width: 100%;
-                padding: 0 0 8px;
-                .boxtop__call-2 {
-                    img {
-                        width: 25px;
-                        height: 25px;
-                    }
-                }
-            }
-            &__partner {
-                padding-left: 0px;
-                ul {
-                    width: 100%;
-                    font-size: 13px;
-                    padding: 0;
-                    li {
-                        margin-bottom: 5px;
-                    }
-                }
-            }
-            &__protect {
-                padding-left: 0;
+        }
+        &__pic {
+            display: none;
+        }
+        &__contact {
+            padding-right: 0;
+        }
+        &__protect {
+            padding-top: 0;
+        }
+        &__social {
+            justify-content: center;
+            width: 100%;
+            padding: 0 0 8px;
+            .boxtop__call-2 {
                 img {
-                    width: 40%;
-                    margin: 0 auto;
+                    width: 25px;
+                    height: 25px;
                 }
+            }
+        }
+        &__partner {
+            padding-left: 0px;
+            ul {
+                width: 100%;
+                font-size: 13px;
+                padding: 0;
+                li {
+                    margin-bottom: 5px;
+                }
+            }
+        }
+        &__protect {
+            padding-left: 0;
+            img {
+                width: 40%;
+                margin: 0 auto;
             }
         }
         &__box {
             padding-left: 0px;
         }
-        &__Logo {
+        &__logo {
             width: 40%;
             text-align: left;
             margin: 0 auto;
         }
     }
     @media (max-width: 375px) {
-        &__infor {
-            &__title {
-                h3 {
-                    margin-top: 10px;
-                    font-size: 15px;
-                }
+        &__title {
+            h3 {
+                margin-top: 10px;
+                font-size: 15px;
             }
         }
     }
     @media (max-width: 320px) {
-        &__infor {
-            &__title {
-                h3 {
-                    font-size: 19px;
-                    margin-top: 5px;
-                }
+        &__title {
+            h3 {
+                font-size: 19px;
+                margin-top: 5px;
             }
-            &__Social {
-                .boxtop__call-2 {
-                    font-size: 13px;
-                }
+        }
+        &__social {
+            .boxtop__call-2 {
+                font-size: 13px;
             }
         }
     }
