--- a/popup_kangnnam/popup_1_0_0/sass/app.css
+++ b/popup_kangnnam/popup_1_0_0/sass/app.css
@@ -1,3 +1,7 @@
+.mb20 {
+  margin-bottom: 20px;
+}
+
 .pop_regkn_1_0_0__box .modal-header {
   padding: 0;
   border-bottom: unset;
@@ -14,7 +18,13 @@
 
 .pop_regkn_1_0_0__box .modal-box {
   max-width: 350px;
-  min-width: 250px;
+  min-width: 300px;
+}
+
+@media (max-width: 280px) {
+  .pop_regkn_1_0_0__box .modal-box {
+    min-width: 250px;
+  }
 }
 
 .pop_regkn_1_0_0__box .modal-close {
@@ -89,7 +99,13 @@
 
 .pop_callkn_1_0_0__box .modal-box {
   max-width: 350px;
-  min-width: 250px;
+  min-width: 300px;
+}
+
+@media (max-width: 280px) {
+  .pop_callkn_1_0_0__box .modal-box {
+    min-width: 250px;
+  }
 }
 
 .pop_callkn_1_0_0__box .modal-close {
@@ -99,23 +115,62 @@
   margin-top: 5px;
 }
 
+.pop_callkn_1_0_0__box .modal-body {
+  padding: 0px 20px 15px;
+}
+
 .pop_callkn_1_0_0__des {
-  padding: 20px 0 10px;
+  padding: 0px 20px 10px;
   color: #777;
   font-weight: 600;
-  font-style: italic;
   font-size: 14px;
+}
+
+@media (max-width: 280px) {
+  .pop_callkn_1_0_0__des {
+    font-size: 12px;
+  }
 }
 
 .pop_callkn_1_0_0__des p {
   margin: 0;
+  font-style: italic;
+}
+
+.pop_callkn_1_0_0__des a {
+  width: 100%;
+  background: #f26649;
+  color: #fff;
+  border: none;
+  cursor: pointer;
+  font-size: 14px;
+  margin-top: 5px;
+  border-radius: 4px;
+  text-transform: uppercase;
+  padding: 10px 0px;
+  font-weight: bold;
+  cursor: pointer;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.pop_callkn_1_0_0__des span {
+  margin-left: 10px;
+}
+
+.pop_callkn_1_0_0__call {
+  margin-left: 0 !important;
 }
 
 .pop_callkn_1_0_0 input {
   width: 100%;
   margin-bottom: 4px;
   font-size: 14px;
-  padding: 15px 0;
+  padding: 10px 0;
   text-align: center;
   color: #333;
   border: 1px solid #b7b7b7;
@@ -132,7 +187,7 @@
   margin-top: 5px;
   border-radius: 4px;
   text-transform: uppercase;
-  padding: 15px 0;
+  padding: 10px 0;
   font-weight: bold;
 }
 
@@ -142,5 +197,21 @@
   font-weight: 600;
   font-style: italic;
   text-align: center;
+}
+
+.pop_callkn_1_0_0__mb {
+  margin-top: 10px !important;
+}
+
+@media (max-width: 1920px) and (min-width: 768px) {
+  .pop_callkn_1_0_0__mb {
+    display: none !important;
+  }
+}
+
+@media (max-width: 767px) {
+  .pop_callkn_1_0_0__pc {
+    display: none;
+  }
 }
 /*# sourceMappingURL=app.css.map */
