--- a/popup_kangnnam/popup_1_0_0/sass/app.scss
+++ b/popup_kangnnam/popup_1_0_0/sass/app.scss
@@ -1,4 +1,8 @@
 //popup đăng ký tư vấn
+.mb20 {
+    margin-bottom: 20px;
+}
+
 .pop_regkn_1_0_0 {
     &__box {
         .modal-header {
@@ -99,25 +103,50 @@
             margin-right: 9px;
             margin-top: 5px;
         }
+        .modal-body {
+            padding: 0px 20px 15px;
+        }
     }
     &__des {
-        padding: 20px 0 10px;
+        padding: 0px 20px 10px;
         color: #777;
         font-weight: 600;
-        font-style: italic;
         font-size: 14px;
         @media (max-width: 280px) {
-            font-size: 13px;
+            font-size: 12px;
         }
         p {
             margin: 0;
+            font-style: italic;
         }
+        a {
+            width: 100%;
+            background: #f26649;
+            color: #fff;
+            border: none;
+            cursor: pointer;
+            font-size: 14px;
+            margin-top: 5px;
+            border-radius: 4px;
+            text-transform: uppercase;
+            padding: 10px 0px;
+            font-weight: bold;
+            cursor: pointer;
+            display: flex;
+            justify-content: center;
+        }
+        span {
+            margin-left: 10px;
+        }
+    }
+    &__call {
+        margin-left: 0 !important;
     }
     input {
         width: 100%;
         margin-bottom: 4px;
         font-size: 14px;
-        padding: 15px 0;
+        padding: 10px 0;
         text-align: center;
         color: #333;
         border: 1px solid #b7b7b7;
@@ -134,7 +163,7 @@
             margin-top: 5px;
             border-radius: 4px;
             text-transform: uppercase;
-            padding: 15px 0;
+            padding: 10px 0;
             font-weight: bold;
         }
     }
@@ -144,5 +173,16 @@
         font-weight: 600;
         font-style: italic;
         text-align: center;
+    }
+    &__mb {
+        margin-top: 10px !important;
+        @media (max-width: 1920px) and (min-width: 768px) {
+            display: none !important;
+        }
+    }
+    &__pc {
+        @media (max-width: 767px) {
+            display: none;
+        }
     }
 }
