--- a/Footer/footer_kn_1_0_0/sass/style.scss
+++ b/Footer/footer_kn_1_0_0/sass/style.scss
@@ -1,8 +1,23 @@
 @import "style-min";
+.note {
+    width: 100%;
+    position: fixed;
+    bottom: 0;
+    background: rgba(0, 87, 134, 0.6);
+    padding: 5px 0;
+    color: #fff;
+    @media (max-width: 767px) {
+        position: unset;
+        background: #033c9a;
+        font-size: 13px;
+    }
+}
+
 .footer_kn_1_0_0 {
     span,
     a {
         color: #fff;
+        font-size: 14px;
     }
     background: url(../images/ft-bg.jpg);
     padding: 40px 0;
@@ -70,16 +85,16 @@
             text-transform: uppercase;
             margin-bottom: 10px;
             display: block;
-            font-size: 12px;
+            font-size: 14px;
         }
         p {
             display: inline;
             color: #f69679;
-            font-size: 12px;
+            font-size: 14px;
         }
         span {
             display: block;
-            font-size: 12px;
+            font-size: 14px;
         }
     }
     &__policy {
@@ -119,6 +134,13 @@
         &__box {
             margin-top: 10px;
             gap: 10px;
+        }
+        &__bottom {
+            a,
+            p,
+            span {
+                font-size: 12px;
+            }
         }
         &__text {
             font-size: 12px;
