--- a/Footer/footer_kn_1_0_0/sass/style.scss
+++ b/Footer/footer_kn_1_0_0/sass/style.scss
@@ -1,18 +1,17 @@
-.note {
-    width: 100%;
-    position: fixed;
-    bottom: 0;
-    background: rgba(0, 87, 134, 0.6);
-    padding: 5px 0;
-    color: #fff;
-    @media (max-width: 767px) {
-        position: unset;
-        background: #033c9a;
-        font-size: 13px;
-    }
-}
-
 .footer_kn_1_0_0 {
+    &__note {
+        width: 100%;
+        position: fixed;
+        bottom: 0;
+        background: rgba(0, 87, 134, 0.6);
+        padding: 5px 0;
+        color: #fff;
+        @media (max-width: 767px) {
+            position: unset;
+            background: #033c9a;
+            font-size: 13px;
+        }
+    }
     span,
     a {
         color: #fff;
