--- a/Header/header_kn_1_1_0/media/sass/_header.scss
+++ b/Header/header_kn_1_1_0/media/sass/_header.scss
@@ -1,9 +1,3 @@
-// body {
-//     padding-top: 90px;
-//     @media #{$r1024} {
-//         padding-top: 65px;
-//     }
-// }
 .header_1_1_0 {
     border-bottom: 1px solid #eee;
     position: fixed;
@@ -11,42 +5,15 @@
     width: 100%;
     top: 0;
     background-color: #fff;
-    @extend %font1;
-    @media #{$r1024} {
-        background-color: #fff;
-        height: 65px;
-    }
     &__box {
         display: flex;
         justify-content: space-between;
-        @media #{$r1024} {
-            display: block;
-        }
     }
     &__section {
         display: flex;
         align-items: center;
-        @media #{$r1024} {
-            display: block;
-            width: 100%;
-        }
     }
     &main {
-        @media #{$r1024} {
-            display: none;
-            width: 270px;
-            background: #fff;
-            position: fixed;
-            height: 100%;
-            left: 0;
-            top: 0;
-            z-index: 3;
-            overflow: auto;
-            padding-bottom: 20px;
-            @media (max-width: 280px) {
-                width: 200px;
-            }
-        }
         &.active {
             display: block;
             animation: animateleft 0.4s;
@@ -59,22 +26,9 @@
         cursor: pointer;
         color: #333;
         font-weight: 600;
-        @media (max-width: 1180px) {
-            padding: 36px 6px;
-        }
-        @media #{$r1024} {
-            padding: 9px 12px;
-            display: block;
-            font-weight: 600;
-            border-top: 1px dotted #ccc;
-        }
     }
     &__logo2 {
         display: none;
-        @media #{$r1024} {
-            display: block;
-            text-align: center;
-        }
         img {
             max-width: 90%;
             margin: 20px 0 0;
@@ -99,47 +53,17 @@
         display: flex;
         list-style: none;
         padding: 0;
-        @media #{$r1024} {
-            display: block;
-        }
     }
     &__logo {
         height: 90px;
         display: flex;
         align-items: center;
-        @media #{$r1024} {
-            text-align: center;
-            width: 100px;
-            margin: 0 auto;
-            position: relative;
-            display: block;
-        }
-        @media #{$r414} {
-            width: 125px;
-        }
-        img {
-            @media #{$r1024} {
-                position: absolute;
-                top: 10px;
-                left: 0;
-                height: 45px;
-                max-width: 140px;
-            }
-            @media #{$r414} {
-                height: 36px;
-                top: 15px;
-            }
-        }
     }
     &__menu,
     &__call {
         position: absolute;
         top: 13px;
         display: none;
-        @media #{$r1024} {
-            display: flex;
-            align-items: center;
-        }
     }
     &__menu {
         font-size: 30px;
@@ -149,23 +73,11 @@
         color: #00597d;
         padding-right: 35px;
         border-right: 1px solid #eee;
-        @media #{$r768} {
-            left: 20px;
-        }
-        @media #{$r414} {
-            left: 16px;
-        }
     }
     &__call {
         width: 40px;
         height: 40px;
         right: -15px;
-        @media #{$r768} {
-            right: 5px;
-        }
-        @media #{$r414} {
-            right: 15px;
-        }
     }
     &__item.active {
         background-color: #eee;
@@ -178,22 +90,12 @@
         font-size: 14px;
         font-weight: 600;
         text-transform: uppercase;
-        @media #{$r1024} {
-            margin: 0 5px;
-            display: block;
-            text-align: center;
-            border-radius: 6px;
-        }
     }
     &__regist {
         background: #d2322f;
         margin-left: 10px;
         margin-top: -9px;
         cursor: pointer;
-        @media #{$r768} {
-            margin-left: 5px;
-            margin-top: 5px;
-        }
     }
     &__phone {
         margin-bottom: 9px;
@@ -202,11 +104,110 @@
         cursor: pointer;
         color: #00597D;
         background: #DCDCDC;
-        @media (max-width: 1024px) {
-            margin-bottom: 15px;
+    }
+    @media (max-width:1180px) {
+        &__item {
+            padding: 36px 6px;
         }
-        @media #{$r768} {
+    }
+    @media(max-width:1024px) {
+        background-color: #fff;
+        height: 65px;
+        &__box {
+            display: block;
+        }
+        &__section {
+            display: block;
+            width: 100%;
+        }
+        &main {
+            display: none;
+            width: 270px;
+            background: #fff;
+            position: fixed;
+            height: 100%;
+            left: 0;
+            top: 0;
+            z-index: 3;
+            overflow: auto;
+            padding-bottom: 20px;
+        }
+        &__item {
+            padding: 9px 12px;
+            display: block;
+            font-weight: 600;
+            border-top: 1px dotted #ccc;
+        }
+        &__logo2 {
+            display: block;
+            text-align: center;
+        }
+        &__list {
+            display: block;
+        }
+        &__logo {
+            text-align: center;
+            width: 100px;
+            margin: 0 auto;
+            position: relative;
+            display: block;
+            img {
+                position: absolute;
+                top: 10px;
+                left: 0;
+                height: 45px;
+                max-width: 140px;
+            }
+        }
+        &__menu,
+        &__call {
+            display: flex;
+            align-items: center;
+        }
+        &__phone,
+        &__regist {
+            margin: 0 5px;
+            display: block;
+            text-align: center;
+            border-radius: 6px;
+        }
+        &__phone {
+            margin-bottom: 5px;
+        }
+    }
+    @media (max-width:768px) {
+        &__menu {
+            left: 20px;
+        }
+        &__call {
+            right: 5px;
+        }
+        &__regist {
             margin-left: 5px;
+            margin-top: 5px;
+        }
+        &__phone {
+            margin-left: 5px;
+        }
+    }
+    @media (max-width:414px) {
+        &__logo {
+            width: 125px;
+            img {
+                height: 36px;
+                top: 15px;
+            }
+        }
+        &__menu {
+            left: 16px;
+        }
+        &__call {
+            right: 15px;
+        }
+    }
+    @media (max-width:280px) {
+        &main {
+            width: 200px;
         }
     }
 }
