--- a/Popup/pop_regkn_1_1_0/sass/pop_regkn_1_1_0.css
+++ b/Popup/pop_regkn_1_1_0/sass/pop_regkn_1_1_0.css
@@ -1,7 +1,3 @@
-.mt20 {
-  margin-top: 20px;
-}
-
 .pop_regkn_1_1_0__box .modal-header {
   padding: 0;
   border-bottom: unset;
@@ -321,4 +317,4 @@
     display: none;
   }
 }
-/*# sourceMappingURL=app.css.map */
+/*# sourceMappingURL=pop_regkn_1_1_0.css.map */
