--- a/banner/popup_banner/sass/style.scss
+++ b/banner/popup_banner/sass/style.scss
@@ -2,6 +2,13 @@
     #modal-img {
         display: block;
     }
+    .modal-box {
+        position: absolute;
+        left: 50%;
+        top: 50%;
+        transform: translate(-50%, -50%);
+        margin: 0;
+    }
     .modal-pic {
         img {
             display: block;
@@ -16,7 +23,6 @@
     @media(max-width: 428px) {
         .modal-box {
             width: 90%;
-            margin: 50px auto;
         }
     }
 }
