--- a/banner/popup_banner/sass/style.scss
+++ b/banner/popup_banner/sass/style.scss
@@ -1,4 +1,10 @@
 .popup_banner {
+    .modal-bg {
+        transition: none;
+    }
+    .animate-zoom {
+        animation: none;
+    }
     #modal-img {
         display: block;
     }
